Fixed some padding issues that were causing too much to be around the cards

--- a/HpTcgCardBrowser.Web/wwwroot/css/accio.css
+++ b/HpTcgCardBrowser.Web/wwwroot/css/accio.css
@@ -149,3 +149,11 @@ body {
     margin: 0 !important;
     padding: 0 !important;*/
 }
+.card-body{
+    background-color: var(--parchmentPaper);
+    border: none !important;
+}
+.card {
+    background-color: var(--parchmentPaper);
+    border: none !important;
+}
